--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <div class="news1">
             <h2>Hydrogen VS Electric Cars</h2>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+            <hr class="line" />
           </div>
           <div class="news2">
             <h2>The Downsides of AI Artistry</h2>
@@ -61,6 +62,7 @@
               What are the possible adverse effects of on-demand AI image
               generation?
             </p>
+            <hr class="line" />
           </div>
           <div class="news3">
             <h2>Is VC Funding Drying Up?</h2>
@@ -72,29 +74,38 @@
         </div>
       </div>
       <div class="footer">
-        <img src="./assets/images/image-retro-pcs.jpg" alt="retro pcs image" />
-        <div class="footer-txt">
-          <h1>01</h1>
-          <h2>Reviving Retro PCs</h2>
-          <p>What happens when old PCs are given modern upgrades?</p>
+        <div class="footer1">
+          <img
+            src="./assets/images/image-retro-pcs.jpg"
+            alt="retro pcs image"
+          />
+          <div class="footer-txt">
+            <h1>01</h1>
+            <h2>Reviving Retro PCs</h2>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </div>
         </div>
-        <img
-          src="./assets/images/image-top-laptops.jpg"
-          alt="retro pcs image"
-        />
-        <div class="footer-txt">
-          <h1>02</h1>
-          <h2>Top 10 Laptops of 2022</h2>
-          <p>Our best picks for various needs and budget.</p>
+        <div class="footer2">
+          <img
+            src="./assets/images/image-top-laptops.jpg"
+            alt="retro pcs image"
+          />
+          <div class="footer-txt">
+            <h1>02</h1>
+            <h2>Top 10 Laptops of 2022</h2>
+            <p>Our best picks for various needs and budget.</p>
+          </div>
         </div>
-        <img
-          src="./assets/images/image-gaming-growth.jpg"
-          alt="retro pcs image"
-        />
-        <div class="footer-txt">
-          <h1>03</h1>
-          <h2>The Growth of Gaming</h2>
-          <p>How the pandemic has sparked fresh opportunities.</p>
+        <div class="footer3">
+          <img
+            src="./assets/images/image-gaming-growth.jpg"
+            alt="retro pcs image"
+          />
+          <div class="footer-txt">
+            <h1>03</h1>
+            <h2>The Growth of Gaming</h2>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+          </div>
         </div>
       </div>
     </div>
